--- a/css/_tpl-archive.scss
+++ b/css/_tpl-archive.scss
@@ -41,6 +41,7 @@
             @include mn768 {
                 max-width: 100%;
                 margin: 0 auto;
+                max-height: 200px;
             }
         }
     }
