--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -17,7 +17,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        padding: 70px 30px 30px;
+        padding: 30px;
     }
     &__top {
         text-align: center;
