--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -85,6 +85,10 @@
         margin: 20px 0;
         text-align: center;
     }
+    .wpcf7-validation-errors {
+        border: 0;
+    color: red;
+    }
     label {
         margin: 0;
         font-weight: inherit;
@@ -170,6 +174,9 @@ div.wpcf7 .ajax-loader {
     }
     .wpcf7-mail-sent-ok {
         display: none !important;
+    }
+    .btn {
+        width: 100%;
     }
 }
 
