--- a/css/_header.scss
+++ b/css/_header.scss
@@ -16,16 +16,18 @@
     }
     .navbar-collapse {
         position: absolute;
-        top: 40px;
+        top: 50px;
         right: 5px;
+        left: 5px;
         background: white;
         box-shadow: 0px 0px 1px grey;
         margin: 0;
         text-align: left;
         text-transform: uppercase;
+        font-size: 15px;
         font-weight: 700;
-        max-width: 300px;
-        width: 230px;
+        max-width: 500px;
+        margin-left: auto;
         @include mn550 {
             width: 500px;
         }
@@ -52,6 +54,7 @@
     }
     .dropdown-menu li {
         text-transform: none;
+        font-size: 15px;
     }
     .navbar-nav .open .dropdown-menu>li>a {
         left: 1px;
@@ -99,8 +102,9 @@
 
 .menu-mob {
     position: fixed;
-    top: 5px;
-    right: 5px;
+    top: -5px;
+    right: 0;
+    left: 0;
     z-index: 99;
     @include mn992 {
         display: none;
@@ -109,23 +113,31 @@
 
 .menu-btn {
     width: 40px;
-    padding: 7px;
-    border: 1px solid black;
-    border-radius: 4px;
     margin: 0;
+    padding: 0;
+    position: fixed;
+    right: 5px;
+    top: 5px;
+    z-index: 99;
+    border: 0;
+    border-radius: 0;
     span {
         display: block;
-        height: 3px;
+        height: 5px;
         background-color: #000;
     }
     span+span {
-        margin-top: 3px;
+        margin-top: 6px;
     }
     @include mn768 {
         display: block;
     }
 }
 
+.admin-bar .menu-btn {
+    top: 55px;
+}
+
 .admin-bar .menu-mob {
-    margin-top: 50px;
+    margin-top: 40px;
 }
