--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -27,7 +27,9 @@
         &:before {
             opacity: 0;
             content: '';
-            @include svg-icon-check;
+            background: url(../img/icon-check.png) center no-repeat;
+            width: 16px;
+            height: 12px;
             color: inherit;
             line-height: 29px;
             text-decoration: inherit;
@@ -87,7 +89,10 @@
     }
     .wpcf7-validation-errors {
         border: 0;
-    color: red;
+        color: red;
+    }
+    .wpcf7-mail-sent-ok {
+        display: none !important;
     }
     label {
         margin: 0;
@@ -171,9 +176,6 @@ div.wpcf7 .ajax-loader {
         &:hover {
             text-decoration: none;
         }
-    }
-    .wpcf7-mail-sent-ok {
-        display: none !important;
     }
     .btn {
         width: 100%;
@@ -386,13 +388,19 @@ div.wpcf7 .ajax-loader {
     }
 }
 
+.form-wrap {
+    position: relative;
+}
+
 .form-sent-ok {
+    text-align: center;
     position: absolute;
-    left: 0px;
+    left: 0;
     right: 0;
-    top: 20px;
-    bottom: 20px;
+    top: 0;
+    bottom: 0;
     background: $lightgrey;
+    box-shadow: 0 0 2px grey;
     text-transform: uppercase;
     z-index: 1;
     display: none;
@@ -420,7 +428,7 @@ div.wpcf7 .ajax-loader {
     max-height: 0;
     overflow: hidden;
     transition: max-height .5s 0s;
-    &.active{
+    &.active {
         max-height: 500px;
     }
     &-inner {
@@ -517,4 +525,26 @@ div.wpcf7 .ajax-loader {
 
 .js-team-item-boss {
     transition: margin .5s 0s;
+}
+
+.fancybox-wrap {
+    .form-get-offer {
+        position: static;
+        border: 0;
+    }
+    .form-get-offer__inner {
+        top: 0;
+        transform: none;
+        padding: 0;
+    }
+    .wpcf7 .wpcf7-validation-errors {
+        position: absolute;
+        bottom: 0;
+        top: auto;
+        z-index: 1;
+        background: white;
+        border: 1px solid;
+        margin: 0;
+        padding: 10px;
+    }
 }
