--- a/css/_header.scss
+++ b/css/_header.scss
@@ -59,6 +59,12 @@
     .navbar-nav .open .dropdown-menu>li>a {
         left: 1px;
     }
+    #menu-item-100,
+    #menu-item-103,
+    #menu-item-106 {
+        color: #999;
+    }
+
 }
 
 @media (max-width: 991px) {
