--- a/css/_tpl-sliders.scss
+++ b/css/_tpl-sliders.scss
@@ -75,6 +75,7 @@
         display: flex;
         height: 60px;
         padding: 5%;
+        align-items: center;
         @include mn768 {
             height: 100px;
         }
